src/me/miak/parser/CoolangParser.java
// Generated from C:\Users\mati8\Desktop\Semestr5\MIAK\Colang\ColangCompiler\resources\Coolang.g4 by ANTLR 4.9.3

package me.miak.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoolangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUN=1, CONST=2, MUTABLE=3, VAR=4, OR=5, AND=6, EQ=7, NEQ=8, GT=9, LT=10, 
		GTEQ=11, LTEQ=12, PLUS=13, MINUS=14, MULT=15, DIV=16, POW=17, NOT=18, 
		HASH=19, AMP=20, INT_TYPE=21, BOOL_TYPE=22, VOID_TYPE=23, TO=24, BY=25, 
		THROUGH=26, COL=27, SCOL=28, ASSIGN=29, OPAR=30, CPAR=31, OBRACE=32, CBRACE=33, 
		OSQR=34, CSQR=35, DQUOTE=36, ARROW=37, COMMA=38, RETURN=39, FOR=40, IN=41, 
		IF=42, ELIF=43, ELSE=44, WHILE=45, TRUE=46, FALSE=47, PRINT=48, ID=49, 
		INT=50, FLOAT=51, STRING=52, COMMENT=53, SPACE=54, OTHER=55;
	public static final int
		RULE_parse = 0, RULE_block = 1, RULE_stat = 2, RULE_returnStat = 3, RULE_funDefinition = 4, 
		RULE_funRetType = 5, RULE_funDefBody = 6, RULE_lambda = 7, RULE_lambdaBody = 8, 
		RULE_funDefinitionArgs = 9, RULE_funCall = 10, RULE_funCallParentheses = 11, 
		RULE_funArgs = 12, RULE_outStat = 13, RULE_assignment = 14, RULE_declaration = 15, 
		RULE_arrayCreation = 16, RULE_declarationWithAssignment = 17, RULE_type = 18, 
		RULE_funType = 19, RULE_mutability = 20, RULE_ifStat = 21, RULE_conditionBlock = 22, 
		RULE_statBlock = 23, RULE_whileStat = 24, RULE_forStat = 25, RULE_range = 26, 
		RULE_expr = 27, RULE_atom = 28, RULE_lvalue = 29, RULE_id = 30, RULE_idxAtom = 31, 
		RULE_ptrExpr = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "block", "stat", "returnStat", "funDefinition", "funRetType", 
			"funDefBody", "lambda", "lambdaBody", "funDefinitionArgs", "funCall", 
			"funCallParentheses", "funArgs", "outStat", "assignment", "declaration", 
			"arrayCreation", "declarationWithAssignment", "type", "funType", "mutability", 
			"ifStat", "conditionBlock", "statBlock", "whileStat", "forStat", "range", 
			"expr", "atom", "lvalue", "id", "idxAtom", "ptrExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'fun'", "'const'", "'mut'", "'let'", "'or'", "'and'", "'=='", 
			"'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'^'", 
			"'not'", "'#'", "'&'", "'int'", "'bool'", "'void'", "'to'", "'by'", "'::'", 
			"':'", "';'", "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", "'\"'", 
			"'->'", "','", "'ret'", "'for'", "'in'", "'if'", "'elif'", "'else'", 
			"'while'", "'true'", "'false'", "'print'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FUN", "CONST", "MUTABLE", "VAR", "OR", "AND", "EQ", "NEQ", "GT", 
			"LT", "GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "POW", "NOT", "HASH", 
			"AMP", "INT_TYPE", "BOOL_TYPE", "VOID_TYPE", "TO", "BY", "THROUGH", "COL", 
			"SCOL", "ASSIGN", "OPAR", "CPAR", "OBRACE", "CBRACE", "OSQR", "CSQR", 
			"DQUOTE", "ARROW", "COMMA", "RETURN", "FOR", "IN", "IF", "ELIF", "ELSE", 
			"WHILE", "TRUE", "FALSE", "PRINT", "ID", "INT", "FLOAT", "STRING", "COMMENT", 
			"SPACE", "OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Coolang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CoolangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CoolangParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			block();
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUN) | (1L << CONST) | (1L << MUTABLE) | (1L << MULT) | (1L << RETURN) | (1L << FOR) | (1L << IF) | (1L << WHILE) | (1L << PRINT) | (1L << ID) | (1L << OTHER))) != 0)) {
				{
				{
				setState(69);
				stat();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public Token OTHER;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunDefinitionContext funDefinition() {
			return getRuleContext(FunDefinitionContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclarationWithAssignmentContext declarationWithAssignment() {
			return getRuleContext(DeclarationWithAssignmentContext.class,0);
		}
		public IfStatContext ifStat() {
			return getRuleContext(IfStatContext.class,0);
		}
		public OutStatContext outStat() {
			return getRuleContext(OutStatContext.class,0);
		}
		public WhileStatContext whileStat() {
			return getRuleContext(WhileStatContext.class,0);
		}
		public ForStatContext forStat() {
			return getRuleContext(ForStatContext.class,0);
		}
		public ArrayCreationContext arrayCreation() {
			return getRuleContext(ArrayCreationContext.class,0);
		}
		public FunCallContext funCall() {
			return getRuleContext(FunCallContext.class,0);
		}
		public TerminalNode SCOL() { return getToken(CoolangParser.SCOL, 0); }
		public ReturnStatContext returnStat() {
			return getRuleContext(ReturnStatContext.class,0);
		}
		public TerminalNode OTHER() { return getToken(CoolangParser.OTHER, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				funDefinition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				declaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				declarationWithAssignment();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				ifStat();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(80);
				outStat();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(81);
				whileStat();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(82);
				forStat();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(83);
				arrayCreation();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(84);
				funCall();
				setState(85);
				match(SCOL);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(87);
				returnStat();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(88);
				((StatContext)_localctx).OTHER = match(OTHER);
				System.err.println("unknown character: " + (((StatContext)_localctx).OTHER!=null?((StatContext)_localctx).OTHER.getText():null));
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(CoolangParser.RETURN, 0); }
		public TerminalNode SCOL() { return getToken(CoolangParser.SCOL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterReturnStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitReturnStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitReturnStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatContext returnStat() throws RecognitionException {
		ReturnStatContext _localctx = new ReturnStatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_returnStat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(RETURN);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << MULT) | (1L << NOT) | (1L << AMP) | (1L << OPAR) | (1L << TRUE) | (1L << FALSE) | (1L << ID) | (1L << INT))) != 0)) {
				{
				setState(93);
				expr(0);
				}
			}

			setState(96);
			match(SCOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefinitionContext extends ParserRuleContext {
		public TerminalNode FUN() { return getToken(CoolangParser.FUN, 0); }
		public TerminalNode ID() { return getToken(CoolangParser.ID, 0); }
		public TerminalNode COL() { return getToken(CoolangParser.COL, 0); }
		public TerminalNode OPAR() { return getToken(CoolangParser.OPAR, 0); }
		public TerminalNode CPAR() { return getToken(CoolangParser.CPAR, 0); }
		public TerminalNode ARROW() { return getToken(CoolangParser.ARROW, 0); }
		public FunRetTypeContext funRetType() {
			return getRuleContext(FunRetTypeContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(CoolangParser.ASSIGN, 0); }
		public FunDefBodyContext funDefBody() {
			return getRuleContext(FunDefBodyContext.class,0);
		}
		public FunDefinitionArgsContext funDefinitionArgs() {
			return getRuleContext(FunDefinitionArgsContext.class,0);
		}
		public FunDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterFunDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitFunDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitFunDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunDefinitionContext funDefinition() throws RecognitionException {
		FunDefinitionContext _localctx = new FunDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(FUN);
			setState(99);
			match(ID);
			setState(100);
			match(COL);
			setState(101);
			match(OPAR);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(102);
				funDefinitionArgs();
				}
			}

			setState(105);
			match(CPAR);
			setState(106);
			match(ARROW);
			setState(107);
			funRetType();
			setState(108);
			match(ASSIGN);
			setState(109);
			funDefBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunRetTypeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode VOID_TYPE() { return getToken(CoolangParser.VOID_TYPE, 0); }
		public FunRetTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funRetType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterFunRetType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitFunRetType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitFunRetType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunRetTypeContext funRetType() throws RecognitionException {
		FunRetTypeContext _localctx = new FunRetTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funRetType);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TYPE:
			case BOOL_TYPE:
			case OPAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				type();
				}
				break;
			case VOID_TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(VOID_TYPE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefBodyContext extends ParserRuleContext {
		public StatBlockContext statBlock() {
			return getRuleContext(StatBlockContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SCOL() { return getToken(CoolangParser.SCOL, 0); }
		public FunDefBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterFunDefBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitFunDefBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitFunDefBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunDefBodyContext funDefBody() throws RecognitionException {
		FunDefBodyContext _localctx = new FunDefBodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funDefBody);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OBRACE:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				statBlock();
				}
				break;
			case MINUS:
			case MULT:
			case NOT:
			case AMP:
			case OPAR:
			case TRUE:
			case FALSE:
			case ID:
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				expr(0);
				setState(117);
				match(SCOL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LambdaContext extends ParserRuleContext {
		public TerminalNode OPAR() { return getToken(CoolangParser.OPAR, 0); }
		public TerminalNode CPAR() { return getToken(CoolangParser.CPAR, 0); }
		public TerminalNode ARROW() { return getToken(CoolangParser.ARROW, 0); }
		public LambdaBodyContext lambdaBody() {
			return getRuleContext(LambdaBodyContext.class,0);
		}
		public FunDefinitionArgsContext funDefinitionArgs() {
			return getRuleContext(FunDefinitionArgsContext.class,0);
		}
		public LambdaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambda; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterLambda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitLambda(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitLambda(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LambdaContext lambda() throws RecognitionException {
		LambdaContext _localctx = new LambdaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lambda);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(OPAR);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(122);
				funDefinitionArgs();
				}
			}

			setState(125);
			match(CPAR);
			setState(126);
			match(ARROW);
			setState(127);
			lambdaBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LambdaBodyContext extends ParserRuleContext {
		public StatBlockContext statBlock() {
			return getRuleContext(StatBlockContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LambdaBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambdaBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterLambdaBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitLambdaBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitLambdaBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LambdaBodyContext lambdaBody() throws RecognitionException {
		LambdaBodyContext _localctx = new LambdaBodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lambdaBody);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OBRACE:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				statBlock();
				}
				break;
			case MINUS:
			case MULT:
			case NOT:
			case AMP:
			case OPAR:
			case TRUE:
			case FALSE:
			case ID:
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDefinitionArgsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(CoolangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CoolangParser.ID, i);
		}
		public List<TerminalNode> COL() { return getTokens(CoolangParser.COL); }
		public TerminalNode COL(int i) {
			return getToken(CoolangParser.COL, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoolangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoolangParser.COMMA, i);
		}
		public FunDefinitionArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDefinitionArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterFunDefinitionArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitFunDefinitionArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitFunDefinitionArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunDefinitionArgsContext funDefinitionArgs() throws RecognitionException {
		FunDefinitionArgsContext _localctx = new FunDefinitionArgsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funDefinitionArgs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(ID);
			setState(134);
			match(COL);
			setState(135);
			type();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(136);
				match(COMMA);
				setState(137);
				match(ID);
				setState(138);
				match(COL);
				setState(139);
				type();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunCallContext extends ParserRuleContext {
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public List<FunCallParenthesesContext> funCallParentheses() {
			return getRuleContexts(FunCallParenthesesContext.class);
		}
		public FunCallParenthesesContext funCallParentheses(int i) {
			return getRuleContext(FunCallParenthesesContext.class,i);
		}
		public FunCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).enterFunCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolangListener ) ((CoolangListener)listener).exitFunCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolangVisitor ) return ((CoolangVisitor<? extends T>)visitor).visitFunCall(this);
			else return visitor.visitChildren(this);
		}
	}
